# _template

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TUTORIAL.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
app/: dependencies.py  main.py
app/adapters/outbound/: memory.py
app/application/: ports.py  services.py
scripts/: setup.ps1
src/app/: main.py
src/app/adapters/inbound/api/: routers.py  schemas.py
src/app/domain/: errors.py  models.py
src/app/infrastructure/: settings.py
tests/: conftest.py
tests/api/: test_orders_api.py
tests/unit/: test_services.py
