[project]
name = "app"
version = "0.1.0"
description = "Team-Seuk 공통 프로젝트 템플릿 (FastAPI · 헥사고날-라이트)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.27",
    "import-linter>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
files = ["app", "tests"]
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

# THE ONE RULE 을 CI에서 자동 강제한다: import 는 안쪽으로만.
# adapters → application → domain (낮은 계층은 높은 계층을 import 할 수 없다)
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Hexagonal layers point inward"
type = "layers"
layers = [
    "app.adapters",
    "app.application",
    "app.domain",
]
